--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,91 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.icon{
+  border-radius: 50%;
+  border-color: black;
+  background-color:#bdc4dd;
+  width: 2rem;
+  height: 2rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-right: 0.3rem;
+
+  
+  
 }
 
-.App-link {
-  color: #61dafb;
+.contactCard{
+  border: 2px solid gray;
+  width: 15rem;
+  margin: 10px auto;
+  height: 4rem;
+  display: flex;
+ align-items: center;
+ justify-content: center;
+ background-color:aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchBar{
+  margin-top: 2rem;
+  width: 15rem;
+  height: 2rem;
+  border-radius: 0.2rem;
+}
+
+
+
+button {
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  height: 2rem;
+  padding: 0 1.6rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-left: 1rem;
+}
+
+button:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+.left{
+  margin-right: 2rem;
+}
+
+form{
+  border: 2px solid #455EB5;
+  width: 20rem;
+  margin: 2rem auto;
+
+}
+
+form > input {
+   margin: 2rem auto; 
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+.detail{
+  border: 2px solid #455EB5;
+  width: 20rem;
+  margin: 2rem auto;
+}
+
+.noDecoration{
+  text-decoration: none;
 }
